Added icon and started work on problem button

--- a/popup.html
+++ b/popup.html
@@ -1,15 +1,29 @@
 <link href="popup.css" rel="stylesheet" type="text/css" />
 <script type="module" src="popup.js"></script>
 
-<div class="container">
-  <div>
-    <h1 class="title">Daily codeforces problem.</h1>
-    <button id="generateButton">Get random problem</button>
-    <p>
-        <a id="problemUrl">Link to problem</a>
-    </p>
-    <div id="problemRating"></div>
-    <div id="problemTags"></div>
+<body>
+  <div class="container">
+    <div>
+      <h1 class="title">Daily codeforces problem.</h1>
+      <p>
+        <a id="problemUrl" target="_blank">Link to problem</a>
+      </p>
+      <div id="problemRating"></div>
+      <!--<div id="problemTags"></div>-->
+      <button id="generateButton">Random problem</button>
+      <select id="generateTags">
+        <option value="test1">Test1</option>
+        <option value="test2">Test2</option>
+        <option value="test3">Test3</option>
+        <option value="test4">Test4</option>
+      </select>
+    </div>
+    
+    <a class="problem" href="" target="_blank">
+      <div class="problemId">1234A1</div>
+      <div class="problemName">Problemaaaaaaaaaaaaaa</div>
+      <div class="problemRating">800</div>
+    </a>
   </div>
-</div>
+</body>
 
