Added rating range slider

--- a/popup.html
+++ b/popup.html
@@ -27,7 +27,7 @@
         <input id="fromSlider" type="range" step="100" value="800" min="800" max="3500"/>
         <input id="toSlider" type="range" step="100" value="3500" min="800" max="3500"/>
       </div>
-      <div>Rating range: 800-3500</div>
+      <div id="sliders_values">Rating range: 800-3500</div>
     </div>
   </div>
 </body>
