--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div id="container">
-    <h1 class="title">Daily Codeforces problem</h1>
+    <h1>Daily Codeforces problem</h1>
 
     <div id="loading"></div>
     <a class="problem" href="" target="_blank">
@@ -19,9 +19,7 @@
     <div id="problemGeneration">
       <button id="generateButton">Random problem</button>
       <select id="generateTags">
-        <option value="tag1">Tag1</option>
-        <option value="tag2">Tag2</option>
-        <option value="tag3">Tag3</option>
+        <option value=""></option>
       </select>
       <div class="sliders_control">
         <input id="fromSlider" type="range" step="100" value="800" min="800" max="3500"/>
